# rosetta

./: .gitignore  CLAUDE.md  README.md  mypy.ini  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  FEATURE.md  PROCESS.md  ROADMAP.md
docs/archive/: DESIGN_TS.md  DESIGN_multi_pkg.md  PROCESS.md
docs/guides/: cli-entrypoints.md  cli-typer.md  database.md  desktop-run.md  tauri-icons.md  uv-toolchain.md
rosetta/: __init__.py
rosetta/cli/: __main__.py  render.py  repl.py
rosetta/cli/commands/: chat.py  chat_core.py  logs.py  provider.py  route.py  start.py  stats.py  status.py  stop.py  upstream.py
rosetta/cli/core/: batch.py  context.py  once.py  render.py  repl.py
rosetta/sdk/: __init__.py  chat.py  client.py  discover.py  streams.py
rosetta/server/: __main__.py  app.py
rosetta/server/admin/: __init__.py  health.py  logs.py  providers.py  routes.py  shutdown.py  stats.py
rosetta/server/controller/: __init__.py  dataplane.py  errors.py  logs.py  providers.py  runtime.py  stats.py  upstreams.py
rosetta/server/database/: models.py  session.py
rosetta/shared/: formats.py
scripts/: build.py  publish.py
tests/: conftest.py  mock_upstream.py  test_smoke.py
tests/cli/: test_commands.py
tests/sdk/: test_client_admin.py  test_discover.py
tests/server/: conftest.py  test_admin.py  test_dataplane.py  test_router.py  test_selector.py
tests/translation/: test_completions_roundtrip.py  test_messages_roundtrip.py  test_responses_degradation.py  test_responses_roundtrip.py
(+61 files in other folders)
