[project]
name = "rosetta-proxy"
version = "0.1.0"
description = "本地跑的 LLM API 格式转换中枢(Claude / OpenAI Chat Completions / OpenAI Responses 三格式互译)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lianaipeng" }]
dependencies = []

[project.scripts]
rosetta = "rosetta.cli.__main__:main"
rosetta-server = "rosetta.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]
