[project]
name = "rosetta-proxy"
version = "0.1.0"
description = "本地跑的 LLM API 格式转换中枢(Claude / OpenAI Chat Completions / OpenAI Responses 三格式互译)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lianaipeng" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.28",
]

[project.scripts]
rosetta = "rosetta.cli.__main__:main"
rosetta-server = "rosetta.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
